<resources>
    <string name="app_name">Portofolio App</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_android">Android</string>
    <string name="txt_flutter">Flutter</string>
    <string name="txt_uiux">UIUX</string>
    <string name="txt_experiences">Experiences</string>
    <string name="txt_setting">Setting</string>
    <string name="txt_imageview">ImageView</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_portfolio">Portfolio</string>
    <string name="txt_documentation_link">Documentation Link</string>
    <string name="greg_paul">Greg Paul</string>
    <string name="_50_apps_android">50 Apps Android</string>
    <string name="_32_apps_flutter">32 Apps Flutter</string>
    <string name="career">Career</string>
    <string name="about">About</string>
    <string name="content">Content</string>
    <string name="app_android_btn">%s App Android</string>
</resources>