<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/profile_background"
    tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_198dp"
            android:src="@drawable/navheader"
            android:id="@+id/ivBackgroundProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/txt_imageview"/>

        <ImageView
            android:layout_width="@dimen/_130dp"
            android:layout_height="@dimen/_130dp"
            android:layout_marginTop="@dimen/_130dp"
            android:src="@drawable/profile_header"
            android:id="@+id/ivProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivBackgroundProfile"
            android:contentDescription="@string/txt_imageview"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
            android:text="@string/greg_paul"
            android:id="@+id/tvNameProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivProfile"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/career"
            android:id="@+id/tvCareerProfile"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@id/tvNameProfile"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/_56dp"
            android:layout_height="@dimen/_56dp"
            android:layout_marginStart="@dimen/_32dp"
            android:layout_marginTop="@dimen/_16dp"
            android:backgroundTint="@color/orange"
            app:cardCornerRadius="@dimen/_10pd"
            android:id="@+id/cvLinkedinProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCareerProfile">
            <LinearLayout
                android:layout_width="@dimen/_56dp"
                android:layout_height="@dimen/_56dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="@dimen/_21dp"
                    android:layout_height="@dimen/_21dp"
                    android:src="@drawable/mail"
                    android:contentDescription="@string/txt_imageview"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>